# librfn-R

./: .gitmodules  DESCRIPTION  Makevars.in  NAMESPACE  README.md  configure  configure.ac
R/: RFN.R
man/: RFN-package.Rd  showPictures.Rd  somatcopy.Rd  train_rfn.Rd
src/: Makefile  Makevars  Makevars.in  cpu_operations.cpp  cpu_operations.h  gpu_operations.cu  gpu_operations.h  lapack.h  librfn.cpp  librfn.h  nist_spblas.cc  rwrapper.cpp  sparse_matrix.h  sparse_matrix_op.h  use_R_impl.h
src/tests/: testbin.c  tests.cpp  transpose.c
